--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		href="https://reconquistaja.com/programa/feed/" />
 	<link rel="alternate" type="application/rss+xml" title="Feed de comentários para RECONQUISTA JA &raquo;"
 		href="https://reconquistaja.com/programa/comments/feed/" />
+	
 	<script>
 		window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/", "svgExt": ".svg", "source": { "concatemoji": "https:\/\/reconquistaja.com\/programa\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.6.1" } };
 		/*! This file is auto-generated */
@@ -432,6 +433,17 @@
 		}
 	</style>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16687497450">
+	</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'AW-16687497450');
+	</script>
 </head>
 
 <body
